--- a/src/modules/preheaders/preheaders.html
+++ b/src/modules/preheaders/preheaders.html
@@ -1,3 +1,159 @@
+<tr>
+	<td align="center"  id="subjectline">
+		<h4 style="margin: 16px">Subject line & other notes</h4>
+	</td>
+</tr>
+
+<!-- ---------- Subject Line Modules ---------- -->
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "parchment",
+			header: "Subject Line:",
+			subtext: "Please Join Us: A New Era for Japan?"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "parchment",
+			header: "Preheader:",
+			subtext: "Insights into Japan’s next chapter"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "sage",
+			header: "Subject Line:",
+			subtext: "Please Join Us: A New Era for Japan?"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "sage",
+			header: "Preheader:",
+			subtext: "Insights into Japan’s next chapter"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "clarity",
+			header: "Subject Line:",
+			subtext: "Please Join Us: A New Era for Japan?"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "clarity",
+			header: "Preheader:",
+			subtext: "Insights into Japan’s next chapter"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "sapphire dark",
+			header: "Subject Line:",
+			subtext: "Please Join Us: A New Era for Japan?"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "sapphire dark",
+			header: "Preheader:",
+			subtext: "Insights into Japan’s next chapter"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "onyx dark",
+			header: "Subject Line:",
+			subtext: "Please Join Us: A New Era for Japan?"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "onyx dark",
+			header: "Preheader:",
+			subtext: "Insights into Japan’s next chapter"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "currency dark",
+			header: "Subject Line:",
+			subtext: "Please Join Us: A New Era for Japan?"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "currency dark",
+			header: "Preheader:",
+			subtext: "Insights into Japan’s next chapter"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "ink dark",
+			header: "Subject Line:",
+			subtext: "Please Join Us: A New Era for Japan?"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( 'modules/preheaders/templates/template.two-line.html', {
+			variant: "ink dark",
+			header: "Preheader:",
+			subtext: "Insights into Japan’s next chapter"
+		} )
+	</td>
+</tr>
+
+<!-- ---------- END Subject Line Modules ---------- -->
+
+<tr>
+	<td align="center"  id="preheaders">
+		<h4 style="margin: 16px">Preheaders</h4>
+	</td>
+</tr>
+
 <!-- ---------- Preheader Modules ---------- -->
 <tr>
 	<td align="center">
