--- a/src/modules/cta-banner/two-column/two-column-cta-banners.html
+++ b/src/modules/cta-banner/two-column/two-column-cta-banners.html
@@ -8,6 +8,15 @@
 <tr>
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
+			variant: "parchment",
+			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+		} )
+	</td>
+</tr>
+<tr>
+	<td align="center">
+		@@include( "modules/cta-banner/two-column/templates/template.html", {
 			variant: "clarity",
 			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -63,6 +72,15 @@
 </tr>
 
 <!-- ---------- CTA Banner Modules, Two Column, H3 Headline ---------- -->
+<tr>
+	<td align="center">
+		@@include( "modules/cta-banner/two-column/templates/template.html", {
+			variant: "parchment",
+			heading: "<h3 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+		} )
+	</td>
+</tr>
 <tr>
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
