--- a/src/modules/email-headings/email-headings.html
+++ b/src/modules/email-headings/email-headings.html
@@ -11,7 +11,7 @@
 			variant: "parchment",
 			eyebrowLabel: "What's Trending",
 			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -24,7 +24,7 @@
 			variant: "sage",
 			eyebrowLabel: "What's Trending",
 			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -37,7 +37,7 @@
 			variant: "clarity",
 			eyebrowLabel: "What's Trending",
 			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -50,7 +50,7 @@
 			variant: "sapphire",
 			eyebrowLabel: "What's Trending",
 			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -63,7 +63,7 @@
 			variant: "currency",
 			eyebrowLabel: "What's Trending",
 			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -76,7 +76,7 @@
 			variant: "ink",
 			eyebrowLabel: "What's Trending",
 			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "98px",
 			btnLabel: "Download"
 		} )
@@ -97,7 +97,7 @@
 			variant: "parchment",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -110,7 +110,7 @@
 			variant: "sage",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -123,7 +123,7 @@
 			variant: "clarity",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -136,7 +136,7 @@
 			variant: "sapphire",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -149,7 +149,7 @@
 			variant: "currency",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
@@ -162,7 +162,7 @@
 			variant: "ink",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
-			paragraph: '<p class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
 			btnWidth: "65px",
 			btnLabel: "Visit"
 		} )
