--- a/src/modules/preheaders/preheaders.html
+++ b/src/modules/preheaders/preheaders.html
@@ -8,141 +8,19 @@
 
 <tr>
 	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "parchment",
-			header: "Subject Line:",
-			subtext: "Please Join Us: A New Era for Japan?"
-		} )
-	</td>
-</tr>
+		<table style="border: 1px solid red" border="0" cellpadding="0" cellspacing="0" role="presentation" class="module">
+			<tr>
+				<td class="frame"></td>
+				<td style="border: 0;" class="content">
+					<h3>Subject line:</h4>
+					<p class="paragraph-2 margin-b-16">Please Join Us: A New Era for Japan?</p>
 
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "parchment",
-			header: "Preheader:",
-			subtext: "Insights into Japan’s next chapter"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "sage",
-			header: "Subject Line:",
-			subtext: "Please Join Us: A New Era for Japan?"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "sage",
-			header: "Preheader:",
-			subtext: "Insights into Japan’s next chapter"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "clarity",
-			header: "Subject Line:",
-			subtext: "Please Join Us: A New Era for Japan?"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "clarity",
-			header: "Preheader:",
-			subtext: "Insights into Japan’s next chapter"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "sapphire dark",
-			header: "Subject Line:",
-			subtext: "Please Join Us: A New Era for Japan?"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "sapphire dark",
-			header: "Preheader:",
-			subtext: "Insights into Japan’s next chapter"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "onyx dark",
-			header: "Subject Line:",
-			subtext: "Please Join Us: A New Era for Japan?"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "onyx dark",
-			header: "Preheader:",
-			subtext: "Insights into Japan’s next chapter"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "currency dark",
-			header: "Subject Line:",
-			subtext: "Please Join Us: A New Era for Japan?"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "currency dark",
-			header: "Preheader:",
-			subtext: "Insights into Japan’s next chapter"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "ink dark",
-			header: "Subject Line:",
-			subtext: "Please Join Us: A New Era for Japan?"
-		} )
-	</td>
-</tr>
-
-<tr>
-	<td align="center">
-		@@include( 'modules/preheaders/templates/template.two-line.html', {
-			variant: "ink dark",
-			header: "Preheader:",
-			subtext: "Insights into Japan’s next chapter"
-		} )
+					<h3>Preheader:</h4>
+					<p class="paragraph-2">Insights into Japan’s next chapter</p>
+				</td>
+				<td  class="frame"></td>
+			</tr>
+		</table>
 	</td>
 </tr>
 
