--- a/src/modules/cta-banner/two-column/two-column-cta-banners.html
+++ b/src/modules/cta-banner/two-column/two-column-cta-banners.html
@@ -9,7 +9,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
 			variant: "parchment",
-			heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			heading: "<h2 class='margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
@@ -76,7 +76,7 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
 			variant: "parchment",
-			heading: "<h3 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			heading: "<h3 class='margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
