Quick fixes for Leo

--- a/src/modules/cta-banner/two-column/two-column-cta-banners.html
+++ b/src/modules/cta-banner/two-column/two-column-cta-banners.html
@@ -47,6 +47,16 @@
 <tr>
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
+			variant: "onyx",
+			heading: "<h2 class='margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
 			variant: "currency",
 			heading: "<h2 class='margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -105,6 +115,16 @@
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
 			variant: "sapphire",
+			heading: "<h3 class='margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
+			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
+			variant: "onyx",
 			heading: "<h3 class='margin-b-16'>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
