--- a/src/modules/four-column-contents/four-column-contents.html
+++ b/src/modules/four-column-contents/four-column-contents.html
@@ -43,6 +43,15 @@
 <tr>
 	<td align="center">
 		@@include( "modules/four-column-contents/templates/template.html", {
+			variant: "onyx dark",
+			imgSrc: "LAM_ContentImage_Ratio.png"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/four-column-contents/templates/template.html", {
 			variant: "currency dark",
 			imgSrc: "LAM_ContentImage_Ratio.png"
 		} )
