--- a/src/modules/one-column-contents/shift-right/shift-rights.html
+++ b/src/modules/one-column-contents/shift-right/shift-rights.html
@@ -40,6 +40,14 @@
 <tr>
 	<td align="center">
 		@@include( "modules/one-column-contents/shift-right/templates/template.html", {
+			variant: "onyx dark"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/one-column-contents/shift-right/templates/template.html", {
 			variant: "currency dark"
 		} )
 	</td>
