--- a/src/modules/three-column-contents/speaker/speakers.html
+++ b/src/modules/three-column-contents/speaker/speakers.html
@@ -56,6 +56,18 @@
 <tr>
 	<td align="center">
 		@@include( "modules/three-column-contents/speaker/templates/template.html", {
+			variant: "onyx dark",
+			imgSrc: "LAM_Bio_2.png",
+			name: "Last, First Name",
+			phone: "1 212 632 1325",
+			email: "eduardo.mora@lazard.com"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/three-column-contents/speaker/templates/template.html", {
 			variant: "currency dark",
 			imgSrc: "LAM_Bio_2.png",
 			name: "Last, First Name",
