--- a/src/modules/two-column-contents/full-content/full-contents.html
+++ b/src/modules/two-column-contents/full-content/full-contents.html
@@ -40,6 +40,14 @@
 <tr>
 	<td align="center">
 		@@include( "modules/two-column-contents/full-content/templates/template.dark.html", {
+			variant: "onyx"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/full-content/templates/template.dark.html", {
 			variant: "currency"
 		} )
 	</td>
