--- a/src/modules/two-column-contents/strategy-card/strategy-cards.html
+++ b/src/modules/two-column-contents/strategy-card/strategy-cards.html
@@ -44,6 +44,15 @@
 <tr>
 	<td align="center">
 		@@include( "modules/two-column-contents/strategy-card/templates/template.html", {
+			variant: "onyx dark",
+			imgSrc: "LAM_GIFL.png",
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/strategy-card/templates/template.html", {
 			variant: "currency dark",
 			imgSrc: "LAM_GIFL.png",
 		} )
