--- a/src/modules/two-column-contents/teams/teams.html
+++ b/src/modules/two-column-contents/teams/teams.html
@@ -44,6 +44,15 @@
 <tr>
 	<td align="center">
 		@@include( "modules/two-column-contents/teams/templates/template.html", {
+			variant: "onyx dark",
+			imgSrc: "LAM_Bio_1.png"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/teams/templates/template.html", {
 			variant: "currency dark",
 			imgSrc: "LAM_Bio_1.png"
 		} )
