--- a/src/modules/two-column-contents/title-left/title-lefts.html
+++ b/src/modules/two-column-contents/title-left/title-lefts.html
@@ -44,6 +44,15 @@
 <tr>
 	<td align="center">
 		@@include( "modules/two-column-contents/title-left/templates/template.dark.onyx.html", {
+			variant: "onyx",
+			imgSrc: "LAM_ContentImage_Station.png"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/two-column-contents/title-left/templates/template.dark.onyx.html", {
 			variant: "currency",
 			imgSrc: "LAM_ContentImage_Station.png"
 		} )
