--- a/src/modules/email-headings/email-headings.html
+++ b/src/modules/email-headings/email-headings.html
@@ -60,6 +60,19 @@
 <tr>
 	<td align="center">
 		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
+			variant: "onyx",
+			eyebrowLabel: "What's Trending",
+			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			btnWidth: "98px",
+			btnLabel: "Download"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
 			variant: "currency",
 			eyebrowLabel: "What's Trending",
 			heading: '<h1 class="margin-b-16">Lazard Connect</h1>',
@@ -134,6 +147,19 @@
 	<td align="center">
 		@@include( "modules/email-headings/templates/template.dark.html", {
 			variant: "sapphire",
+			eyebrowLabel: "What's Trending",
+			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
+			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
+			btnWidth: "65px",
+			btnLabel: "Visit"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/email-headings/templates/template.dark.onyx.html", {
+			variant: "onyx",
 			eyebrowLabel: "What's Trending",
 			heading: '<h3 class="margin-b-16" >Geopolitical and market implications of the conflict in the Middle East</h3>',
 			paragraph: '<p class="paragraph-2 padding-r-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>',
