--- a/src/modules/tables/numbered/numbered-tables.html
+++ b/src/modules/tables/numbered/numbered-tables.html
@@ -40,6 +40,14 @@
 <tr>
 	<td align="center">
 		@@include( "modules/tables/numbered/templates/template.html", {
+			variant: "onyx dark"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/tables/numbered/templates/template.html", {
 			variant: "currency dark"
 		} )
 	</td>
