--- a/src/modules/three-column-contents/large-thumbnail/large-thumbnails.html
+++ b/src/modules/three-column-contents/large-thumbnail/large-thumbnails.html
@@ -44,6 +44,15 @@
 <tr>
 	<td align="center">
 		@@include( "modules/three-column-contents/large-thumbnail/templates/template.html", {
+			variant: "onyx dark",
+			imgSrc: "LAM_GIFL.png"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/three-column-contents/large-thumbnail/templates/template.html", {
 			variant: "currency dark",
 			imgSrc: "LAM_GIFL.png"
 		} )
