--- a/src/modules/thumbnail-grid/thumbnail-grids.html
+++ b/src/modules/thumbnail-grid/thumbnail-grids.html
@@ -44,6 +44,15 @@
 <tr>
 	<td align="center">
 		@@include( "modules/thumbnail-grid/templates/template.dark.onyx.html", {
+			variant: "onyx",
+			imgSrc: "LAM_ContentImage_Lecture.png"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "modules/thumbnail-grid/templates/template.dark.onyx.html", {
 			variant: "currency",
 			imgSrc: "LAM_ContentImage_Lecture.png"
 		} )
